--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "express-session": "^1.18.1"
+    "jsonwebtoken": "^9.0.2"
   }
 }
